Fix various warnings (FindBugs, Eclipse etc.)
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1049563 13f79535-47bb-0310-9956-ffa450edef68